# MountWizzard4

./: .buildinfo  .coveragerc  .editorconfig  .gitignore  .lgtm.yml  .readthedocs.yaml  .travis.yml  2026-06-10-review.md  AGENTS.md  COLOR_HANDLING_REFACTOR_PLAN.md  CONTRIBUTING.md  CONTRIBUTING.rst  CRASH_ANALYSIS.md  CRASH_ANALYSIS_2026-04-05.md  QOBJECT_LIFETIME_AUDIT_2026-04-05.md  README.md  README.rst  SECURITY.md  SECURITY.rst  _rename_helper.py  _rename_tests_helper.py  alpaca_class_new_plan.md  ascom_plan.md  build-log.txt  changelog.txt  code_review_report.md  compile.yml  features.html  fix_logic_device_tests_plan.md  fix_unittest_ascom_alpaca_plan.md  genindex.html  imageEKOSsort.py  index.html  mount_install.sh  mw4_mac.spec  mw4_mac_local.spec  mw4_mac_work.spec  mw4_windows.spec  mw4_windows_console.spec  mw4_windows_debug.spec  (+36 more)
.doctrees/: environment.pickle  features.doctree  index.doctree
.github/: copilot-instructions.md  test_scripts_aarch64_pypi.yml
3D_Models/: cable-counterweight-part1.stl  cable-counterweight-part2.stl  cable-holder-magnetic-part1.stl  cable-holder-magnetic-part2.stl  cable-holder-part1.stl  cable-holder-part2.stl  cable-holder-part3.stl  cable-holder-part4.stl  cable-plate.stl  readme.rst
_sources/: features.rst.txt  index.rst.txt
_static/: alabaster.css  documentation_options.js
architecture/: a_time.html  calculations.html  index.html
automation/: tasks.py
changelog/: changelog.html
config/: align_hb01.bpts  b_hohenbrunn.hpts  backup.cfg  (+10 more)
support/wheels/PyQt5-5.15.4/: ChangeLog  NEWS  PKG-INFO  README  configure.py  project.py  pyproject.toml
support/wheels/PyQt5-5.15.4/config-tests/: cfgtest_QtCore.cpp
support/wheels/PyQt5-5.15.4/designer/: pluginloader.cpp  pluginloader.h
support/wheels/PyQt5-5.15.4/pyrcc/: pyrccmod.sip
support/wheels/PyQt5-5.15.4/qmlscene/: pluginloader.cpp  pluginloader.h
support/wheels/PyQt5-5.15.4/qpy/QtCore/: qpycore_api.h  qpycore_chimera.cpp  qpycore_chimera.h  qpycore_chimera_signature.cpp  qpycore_chimera_storage.cpp  qpycore_classinfo.cpp  qpycore_classinfo.h  qpycore_decorators.cpp  qpycore_enums_flags.cpp  qpycore_enums_flags.h  qpycore_event_handlers.cpp  qpycore_event_handlers.h  qpycore_init.cpp  qpycore_misc.cpp  qpycore_misc.h  qpycore_namespace.h  qpycore_objectified_strings.h  qpycore_post_init.cpp.in  qpycore_public_api.cpp  qpycore_public_api.h  qpycore_pyqtboundsignal.cpp  qpycore_pyqtboundsignal.h  qpycore_pyqtconfigure.cpp  qpycore_pyqtmethodproxy.cpp  qpycore_pyqtmethodproxy.h  qpycore_pyqtproperty.cpp  qpycore_pyqtproperty.h  qpycore_pyqtpyobject.cpp  qpycore_pyqtpyobject.h  qpycore_pyqtsignal.cpp  qpycore_pyqtsignal.h  qpycore_pyqtslot.cpp  qpycore_pyqtslot.h  qpycore_pyqtslotproxy.cpp  qpycore_pyqtslotproxy.h  qpycore_qjsonvalue.cpp  qpycore_qmessagelogger.cpp  qpycore_qmetaobject.cpp  qpycore_qmetaobject_helpers.cpp  qpycore_qmetaobjectbuilder.h  (+10 more)
support/wheels/PyQt5-5.15.4/qpy/QtDBus/: qpydbus_api.h  qpydbus_chimera_helpers.cpp  qpydbus_chimera_helpers.h  qpydbus_post_init.cpp  qpydbuspendingreply.cpp  qpydbuspendingreply.h  qpydbusreply.cpp  qpydbusreply.h
support/wheels/PyQt5-5.15.4/qpy/QtDesigner/: qpydesignercontainerextension.h  qpydesignercustomwidgetcollectionplugin.h  qpydesignercustomwidgetplugin.h  qpydesignermembersheetextension.h  qpydesignerpropertysheetextension.h  qpydesignertaskmenuextension.h
support/wheels/PyQt5-5.15.4/qpy/QtGui/: qpyopengl_add_constants.cpp  qpyopengl_api.h  qpyopengl_array_convertors.cpp  qpyopengl_attribute_array.cpp  qpyopengl_data_cache.cpp  qpyopengl_data_cache.h  qpyopengl_get.cpp  qpyopengl_init.cpp  qpyopengl_misc.h  qpyopengl_uniform_value_array.cpp  qpyopengl_value_array.cpp  qpyopengl_version_functions.cpp
support/wheels/PyQt5-5.15.4/qpy/QtQml/: qpyqml_api.h  qpyqml_listdata.cpp  qpyqml_listdata.h  qpyqml_post_init.cpp  qpyqml_qjsvalue.cpp  qpyqml_register_singleton_type.cpp  qpyqml_register_type.cpp  qpyqmllistproperty.cpp  qpyqmllistproperty.h  qpyqmllistpropertywrapper.cpp  qpyqmllistpropertywrapper.h  qpyqmlobject.cpp  qpyqmlobject.h  qpyqmlsingletonobject.cpp  qpyqmlsingletonobject.h  qpyqmlvalidator.cpp  qpyqmlvalidator.h
support/wheels/PyQt5-5.15.4/qpy/QtQuick/: qpyquick_api.h  qpyquick_chimera_helpers.cpp  qpyquick_chimera_helpers.h  qpyquick_post_init.cpp  qpyquick_register_type.cpp  qpyquick_register_type.h  qpyquickframebufferobject.cpp  qpyquickframebufferobject.h  qpyquickitem.cpp  qpyquickitem.h  qpyquickpainteditem.cpp  qpyquickpainteditem.h  qpyquickview.cpp  qpyquickview.h  qpyquickwindow.cpp  qpyquickwindow.h
support/wheels/PyQt5-5.15.4/qpy/QtWidgets/: qpywidgets_api.h  qpywidgets_chimera_helpers.cpp  qpywidgets_chimera_helpers.h  qpywidgets_post_init.cpp
support/wheels/PyQt5-5.15.4/qpy/pylupdate/: fetchtr.cpp  pylupdate.h
support/wheels/PyQt5-5.15.4/qpy/pyrcc/: rcc.cpp
support/wheels/PyQt5-5.15.4/sip/Enginio/: Enginiomod.sip  enginio.sip  enginioclient.sip  enginioclientconnection.sip  enginioidentity.sip  enginiomodel.sip  enginiooauth2authentication.sip  enginioreply.sip
support/wheels/PyQt5-5.15.4/sip/QtAndroidExtras/: QtAndroidExtrasmod.sip  qandroidjniobject.sip  qtandroid.sip
support/wheels/PyQt5-5.15.4/sip/QtWebKit/: QtWebKitmod.sip  qwebdatabase.sip  qwebelement.sip  qwebhistory.sip  qwebhistoryinterface.sip  qwebkitglobal.sip  qwebpluginfactory.sip  qwebsecurityorigin.sip  qwebsettings.sip
support/wheels/PyQt5-5.15.4/sip/QtWebKitWidgets/: QtWebKitWidgetsmod.sip  qgraphicswebview.sip  qwebframe.sip  qwebinspector.sip  qwebpage.sip  qwebview.sip
support/wheels/PyQt5-5.15.4/sip/_QOpenGLFunctions_2_0/: _QOpenGLFunctions_2_0mod.sip  qopenglfunctions_2_0.sip
support/wheels/PyQt5-5.15.4/sip/_QOpenGLFunctions_2_1/: _QOpenGLFunctions_2_1mod.sip  qopenglfunctions_2_1.sip
support/wheels/PyQt5-5.15.4/sip/_QOpenGLFunctions_4_1_Core/: _QOpenGLFunctions_4_1_Coremod.sip  qopenglfunctions_4_1_core.sip
support/wheels/PyQt5-5.15.4/sip/_QOpenGLFunctions_ES2/: _QOpenGLFunctions_ES2mod.sip  qopenglfunctions_es2.sip
support/wheels/PyQt5-5.15.4/sip/pylupdate/: pylupdatemod.sip
(+2915 files in other folders)
