############################################################
#
#       #   #  #   #   #    #
#      ##  ##  #  ##  #    #
#     # # # #  # # # #    #  #
#    #  ##  #  ##  ##    ######
#   #   #   #  #   #       #
#
# GUI with PyQT5 for python
#
# written in python3, (c) 2019-2025 by mworion
# Licence APL2.0
#
###########################################################
[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mountwizzard4"
version = "4.0.0a38"
license = "Apache-2.0"
description = "Tool for managing 10micron mounts"
readme = "README.rst"
authors = [
    {name = "Michael Wuertenberger", email = "michael@wuertenberger.org"}
]
keywords = ["6.9.3"]
requires-python = ">=3.11,<3.14"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: MacOS X",
    "Environment :: Other Environment",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Natural Language :: English",
    "Natural Language :: German",
    "Topic :: Documentation :: Sphinx"
]

dependencies = [
    "numpy==2.2.6",
    "opencv-python-headless==4.12.0.88",
    "scipy==1.16.2",
    "astropy==7.1.0",
    "pyerfa==2.0.1.5",
    "astroquery==0.4.11",
    "sep==1.4.1",
    "pyqtgraph==0.13.7",
    "qimage2ndarray==1.10.0",
    "skyfield==1.53",
    "sgp4==2.25",
    "requests==2.32.5",
    "requests_toolbelt==1.0.0",
    "importlib_metadata==8.7.0",
    "python-dateutil==2.9.0.post0",
    "wakeonlan==3.1.0",
    "pybase64==1.4.2",
    "websocket-client==1.8.0",
    "hidapi==0.14.0.post4",
    "range-key-dict==1.1.0",
    "ndicts==0.3.0",
    "packaging==25.0",
    "lz4==4.4.4",
    "xisf==0.9.5",
    "pyside6==6.9.3",
    "pywin32==311; platform_system == 'Windows'",
]
[project.scripts]
mw4 = "mw4.cli:app"

[project.urls]
Documentation = "https://mworion.github.io/MountWizzard4"
Source = "https://github.com/mworion/mountwizzard4"
BugTracker = "https://github.com/mworion/mountwizzard4/issues"
Discussions = "https://github.com/mworion/MountWizzard4/discussions"
Channel = "https://www.youtube.com/user/orion49m/featured"
Forum = "https://www.10micron.eu/forum/"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--import-mode=importlib",
]
qt_api = "pyside6"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 95
indent-width = 4
exclude = ["src/mw4/gui/widgets/*", "src/mw4/assets/*"]

[tool.ruff.lint]
extend-select = [
    "E", "T2", "UP", "I", "C", "LOG", "W", "SIM", "A"
]
ignore = ["SIM117"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"src/mw4/mainApp.py" = ["C901"]
"src/mw4/gui/utilities/gCustomViewBox.py" = ["C901"]
"src/mw4/gui/utilities/toolsQtWidget.py" = ["C901"]
"src/mw4/gui/utilities/gNormalScatter.py" = ["C901"]
"src/mw4/gui/styles/gradients.py" = ["E501"]
"src/mw4/gui/mainWaddon/tabEnviron_Seeing.py" = ["C901"]
"src/mw4/gui/extWindows/simulator/tools.py" = ["E501"]
"src/mw4/gui/extWindows/uploadPopupW.py" = ["SIM115"]
"src/mw4/logic/powerswitch/pegasusUPBIndi.py" = ["C901"]
"src/mw4/logic/measure/measureCSV.py" = ["SIM115"]
"src/mw4/indibase/indiXML.py" = ["C901", "E501"]
"src/mw4/indibase/indiClient.py" = ["C901", "E501"]
"src/mw4/mountcontrol/convert.py" = ["C901"]
"src/mw4/mountcontrol/connection.py" = ["E501"]
"src/mw4/assets/assetData.py" = ["E501"]

[tool.coverage.run]
source = ["src/mw4/"]
omit = ["src/mw4/assets/*", "src/mw4/gui/widgets/*"]
branch = true

[tool.coverage.paths]
source = ["src/mw4/"]

[tool.coverage.report]
ignore_errors = true
